[gd_scene load_steps=8 format=3 uid="uid://dlu5f2iw00lrd"]

[ext_resource type="Script" path="res://Events/Introduction/introduction.gd" id="1_e2m0l"]
[ext_resource type="Texture2D" uid="uid://dl8yem5hvdoh2" path="res://Player/ship.png" id="2_cwona"]
[ext_resource type="Script" path="res://Events/Introduction/player.gd" id="3_e1r4m"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hxmuj"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_js1ah"]
offsets = PackedFloat32Array(0.0327869, 0.245902, 0.811475, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_n2vd3"]
gradient = SubResource("Gradient_js1ah")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m4p0b"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(960, 540, 1)
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 0.5
initial_velocity_max = 1.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
scale_max = 5.0
color_ramp = SubResource("GradientTexture1D_n2vd3")
anim_offset_max = 1.0

[node name="Introduction" type="Node2D"]
script = ExtResource("1_e2m0l")

[node name="PlayableArea" type="ColorRect" parent="."]
visible = false
offset_left = 710.0
offset_top = 450.0
offset_right = 1210.0
offset_bottom = 950.0
color = Color(0.4, 0, 0.580392, 1)

[node name="BlackBackground" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0430392, 0.0430392, 0.0430392, 1)

[node name="StarsParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_hxmuj")
position = Vector2(960, 540)
amount = 100
process_material = SubResource("ParticleProcessMaterial_m4p0b")
lifetime = 60.0
preprocess = 60.0
fixed_fps = 0
visibility_rect = Rect2(-960, -540, 1920, 1080)

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(960, 700)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_cwona")
script = ExtResource("3_e1r4m")

[node name="FadeInTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FadeInRect" type="ColorRect" parent="."]
z_index = 2
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="FadeOutTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FadeOutRect" type="ColorRect" parent="."]
z_index = 2
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0)

[connection signal="timeout" from="FadeInTimer" to="." method="_on_fade_in_timer_timeout"]
[connection signal="timeout" from="FadeOutTimer" to="." method="_on_fade_out_timer_timeout"]
